# FileViewer

./: .gitignore  README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: ffmpeg.rs  file.rs  metadata.rs  mod.rs
src-tauri/src/models/: mod.rs  partition.rs  video.rs
src-tauri/src/services/: calculator.rs  mod.rs  splitter.rs
src-tauri/src/utils/: ffmpeg_wrapper.rs  mod.rs
src/components/: ExclusionEditor.tsx  FileSelector.tsx  PartitionConfig.tsx  PhotoViewer.tsx  ProgressBar.tsx  ShortcutsBar.tsx  Timeline.tsx  Toast.tsx  VideoPlayer.tsx
src/hooks/: useFfmpegProcess.ts  usePartitionCalculator.ts  useThumbnails.ts  useVideoMetadata.ts
src/stores/: directoryStore.ts  partitionStore.ts  toastStore.ts  videoStore.ts
src/types/: partition.ts  video.ts
src/utils/: formatters.ts  validators.ts
tests/unit/: formatters.test.ts  validators.test.ts
